# GSM

./: .gitignore  clone-repo.bat  install-git.bat  launch.bat  pyproject.toml  update-repo.bat
src/gsm/: app.py
src/gsm/backend/: routes.py
src/gsm/db/: __init__.py  auth_manager.py  dbi.py  query.py
src/gsm/db/migrator/: __init__.py  loader.py  storer.py
src/gsm/frontend/static/css/: login.css  page.css  sidebar.css
src/gsm/frontend/static/imgs/: ele.eps
src/gsm/frontend/static/js/: aggiornamenti.js  bisogni.js  categoria-bisogno.js  config.js  db-selector.js  import.js  login.js  new-persona.js  persona.js  persone.js  report.js  servizi.js  servizio.js
src/gsm/frontend/static/libs/ag-grid/: ag-grid-community.js
src/gsm/frontend/static/libs/tom-select/: tom-select-2.4.1-bootstrap-5.css  tom-select-2.4.1-bootstrap-5.js
src/gsm/frontend/templates/: aggiornamenti.html  bisogni.html  categoria-bisogno.html  import.html  index.html  new-persona.html  persona.html  persone.html  report.html  servizi.html  servizio.html  sidebar.html
